# prism

./: .gitignore  LICENSE  README.md  pyproject.toml
prism/: app.py  config.py  main.py
prism/github/: client.py  models.py  queries.py
prism/styles/: prism.tcss
prism/widgets/: ci_status.py  contributions.py  inbox.py  my_prs.py  pending_reviews.py
