[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism"
version = "0.1.0"
description = "GitHub dashboard in your terminal"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.52.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
prism = "prism.main:app"
